[gd_scene load_steps=4 format=3 uid="uid://cq2mydki4vf4w"]

[ext_resource type="Theme" uid="uid://c3doc5dml7lkv" path="res://doom_theme.tres" id="1_8ke6k"]
[ext_resource type="Script" path="res://scenes/pause_men.gd" id="2_f3gcc"]
[ext_resource type="Script" path="res://scenes/restart.gd" id="3_t2xwf"]

[node name="pause_men" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8ke6k")
script = ExtResource("2_f3gcc")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(29.485, 27.885)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -319.0
offset_right = 335.0
offset_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 211.0
offset_right = 482.0
offset_bottom = 275.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 76
text = "PAUse"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.5
offset_top = -59.5
offset_right = 180.5
offset_bottom = 287.5
grow_horizontal = 2
grow_vertical = 2

[node name="resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "resume"

[node name="restart" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "restart"
script = ExtResource("3_t2xwf")

[node name=",aiom menu" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "MAIN MENU"

[connection signal="pressed" from="Panel/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/,aiom menu" to="." method="_on_aiom_menu_pressed"]
